--- a/templates/form.html
+++ b/templates/form.html
@@ -2,24 +2,24 @@
 <html>
 <head>
     <title>PII Checker</title>
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-    <h1>SonnyLabs LLM Fixer</h1>
+    <div class="container">
+        <h1>SonnyLabs PII Checker</h1>
+        
+        <div class="intro-text">
+            <p>How do I make sure I am not about to send Personally Identifiable information to users?</p>
+            <p>It's a really bad idea for your website (or chatbot) to start giving out names and addresses. Sonny Labs has a tool that will scan your text and highlight any Personally Identifiable information.</p>
+            <p>You can sign up for a free account at <a href="https://sonnylabs.com" target="_blank">sonnylabs.com</a>. They give you an API key and an analysis ID. You can test it below.</p>
+            <p>The whole PII checker is just a few lines of code. SonnyLabs helps people make sure LLMs are not being sent or returning information they should not.</p>
+        </div>
 
-    How do I make sure I am not about to send Personally Identifiable information to users?
-    Its a really bad idea for your website (or chatbot) to start giving out names and Addresses. 
-    
-    Sonny Labs has a tool that will scan your text and highlight any Personally Identifiable information.
-    And I got it working in a few minutes. You can sign up for a free account at https://sonnylabs.com
-    They give you an Api key and an analysis id. You can test it below. 
-    
-    The whole PII checker is a few lines of code. Sonnylabs helps people make sure LLMs are not being sent or returning back
-    information they should not. 
-
-    <h2>Enter Your Text to Check for PII</h2>
-    <form action="/analyze" method="post">
-        <textarea name="text" rows="10" cols="50" placeholder="Paste your text here..."></textarea><br><br>
-        <button type="submit">Check for PII</button>
-    </form>
+        <form action="/analyze" method="post">
+            <h2>Enter Your Text to Check for PII</h2>
+            <textarea name="text" placeholder="Paste your text here..."></textarea>
+            <button type="submit">Check for PII</button>
+        </form>
+    </div>
 </body>
 </html>
