--- a/templates/form.html
+++ b/templates/form.html
@@ -11,7 +11,7 @@
         <div class="intro-text">
             <p>How do I make sure I am not about to send Personally Identifiable information to users?</p>
             <p>It's a really bad idea for your website (or chatbot) to start giving out names and addresses. Sonny Labs has a tool that will scan your text and highlight any Personally Identifiable information.</p>
-            <p>You can sign up for a free account at <a href="https://sonnylabs.com" target="_blank">sonnylabs.com</a>. They give you an API key and an analysis ID. You can test it below.</p>
+            <p>You can sign up for a free account at <a href="https://sonnylabs.ai" target="_blank">sonnylabs.ai</a>. They give you an API key and an analysis ID. You can test it below.</p>
             <p>The whole PII checker is just a few lines of code. SonnyLabs helps people make sure LLMs are not being sent or returning information they should not.</p>
         </div>
 
